--- a/Activity 5/index.html
+++ b/Activity 5/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 5 Activity 5</title>
     <link rel="stylesheet" href="/css/Activity5.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Yleaña Week 5 JS Activity 1-4</h1>
-            <button id="toggleMode">Dark Mode</button>
+            <h1>Yleaña Week 5 JavaScript Activities</h1>
+            <button id="toggleMode"><i class="fas fa-moon"></i> Dark Mode</button>
         </header>
 
         <section>
