--- a/W8_Exercise _Yleaña/index.html
+++ b/W8_Exercise _Yleaña/index.html
@@ -3,29 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Activity4.css">
+    <link rel="stylesheet" href="style.css">
     <title>Week 5 Activity 4</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Yleaña Week 5 CSS Activity 1-4</h1>
-            <button id="toggleMode">Dark Mode</button>
+            <h1 id="title">Yleaña Week 8 Hands On Activity</h1>
+            
+            <div class="controls">
+                <button id="toggleMode">🌙 Dark Mode</button>
+                <select id="languageSelect">
+                    <option value="en">English</option>
+                    <option value="es">Español</option>
+                    <option value="fr">Français</option>
+                </select>
+            </div>
         </header>
 
         <section>
-            <h2>CSS Activities</h2>
+            <h2 id="activitiesTitle">CSS Activities</h2>
             <ol>
-                <li><a href="/W8_Exercise _Yleaña/Yleaña_Excercise 1/index.html">Exercise 1</a></li>
-                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 2/">Exercise 2</a></li>
-                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 3/">Exercise 3</a></li>
-                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 4/">Exercise 4</a></li>
-                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 5/">Exercise 5</a></li>
-                <li><a href="/W8_Exercise _Yleaña/API/index.html">API Activity</a></li>
+                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise1/index.html" data-key="exercise1">Exercise 1</a></li>
+                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise2/" data-key="exercise2">Exercise 2</a></li>
+                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise3/" data-key="exercise3">Exercise 3</a></li>
+                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise4/" data-key="exercise4">Exercise 4</a></li>
+                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise5/" data-key="exercise5">Exercise 5</a></li>
+                <li><a href="/W8_Exercise_Yleaña/API/index.html" data-key="api">Exercise 6 -Hands On Activity</a></li>
             </ol>
         </section>
     </div>
 
-    <script src="Activity4.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
