--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Activities</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My First Web Page</title>
 </head>
 <body>
-    <div id="particles-js"></div>
+    <!-- Background Canvas -->
+    <canvas id="smokeCanvas"></canvas>
 
     <div class="container">
         <header>
@@ -43,12 +45,13 @@
         </section>
 
         <section>
-            <h2>M2 Activity</h2>
+            <h2>M2 Activities</h2>
             <ol>
-                <li><a href="/W8_Exercise _Yleaña/index.html">WEEK 8 Activity</a></li>
+                <li><a href="/W8_Exercise _Yleaña/index.html">WEEK 8 Hands On Task</a></li>
             </ol>
         </section>
-
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
