--- a/Activity 4/index.html
+++ b/Activity 4/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Week 5 Activity 4 - CSS</title>
     <link rel="stylesheet" href="/css/Activity4.css">
-    <title>Week 5 Activity 4</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Yleaña Week 5 CSS Activity 1-4</h1>
-            <button id="toggleMode">Dark Mode</button>
+            <h1>Yleaña - Week 5 CSS Activities</h1>
+            <button id="toggleMode"><i class="fas fa-moon"></i> Dark Mode</button>
         </header>
 
         <section>
@@ -24,6 +25,6 @@
         </section>
     </div>
 
-    <script src="Activity4.js"></script>
+    <script src="/javascript/Activity4.js"></script>
 </body>
 </html>
