--- a/W8_Exercise _Yleaña/index.html
+++ b/W8_Exercise _Yleaña/index.html
@@ -24,12 +24,12 @@
         <section>
             <h2 id="activitiesTitle">CSS Activities</h2>
             <ol>
-                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise1/index.html" data-key="exercise1">Exercise 1</a></li>
-                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise2/" data-key="exercise2">Exercise 2</a></li>
-                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise3/" data-key="exercise3">Exercise 3</a></li>
-                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise4/" data-key="exercise4">Exercise 4</a></li>
-                <li><a href="/W8_Exercise_Yleaña/Yleaña_Exercise5/" data-key="exercise5">Exercise 5</a></li>
-                <li><a href="/W8_Exercise_Yleaña/API/index.html" data-key="api">Exercise 6 -Hands On Activity</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_Excercise 1/index.html" data-key="exercise1">Exercise 1</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 2/index.html" data-key="exercise2">Exercise 2</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 3/index.html" data-key="exercise3">Exercise 3</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 4/index.html" data-key="exercise4">Exercise 4</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_Exercise 5/index.html" data-key="exercise5">Exercise 5</a></li>
+                <li><a href="/W8_Exercise _Yleaña/Yleaña_HandsOnActivity/index.html" data-key="api">Exercise 6 -Hands On Activity</a></li>
             </ol>
         </section>
     </div>
