--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                 <li><a href="/W8_Exercise _Yleaña/index.html">WEEK 8 Hands On Task</a></li>
             </ol>
         </section>
+
+        <section>
+            <h2>Happy Valentines Day!!</h2>
+            <ol>
+                <li><a href="/CyValentinesDay/letter/index.html">WEEK 8 Hands On Task</a></li>
+            </ol>
+        </section>
     </div>
 
     <script src="script.js"></script>
