--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section>
             <h2>Happy Valentines Day!!</h2>
             <ol>
-                <li><a href="/CyValentinesDay/letter/index.html">WEEK 8 Hands On Task</a></li>
+                <li><a href="/CyValentinesDay/letter/index.html">Happy Heart Day</a></li>
             </ol>
         </section>
     </div>
