--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -23,8 +23,8 @@
     <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Welcome to My Portfolio</h1>
-            <h3>IT103 SUMMATIVE PART 3</h3>
+            <h1>Welcome to My First Portfolio</h1>
+            <h3>Web Programming IT103L.A221.2T.24.25 </h3>
             <a href="#projects" class="btn">View Projects</a>
         </div>
     </section>
@@ -49,6 +49,7 @@
             <li><i class="fas fa-mobile-alt"></i> Responsive Web Design</li>
             <li><i class="fas fa-cloud"></i> Java & Python</li>
             <li><i class="fas fa-cloud"></i> C#</li>
+            <li><i class="fab fa-php"></i> Php</li>
         </ul>
     </section>
 
@@ -91,6 +92,29 @@
                 <p>Activity 5 Week 5.</p>
             </a>
         </div>
+        <div class="project-card">
+            <a href="https://github.com/cyxkira29/M2_Yleana_Javascripting" target="_blank">
+                <i class="project-icon fas fa-database"></i>
+                <h3>Project 6</h3>
+                <p>Activity Week 11 Javascripting.</p>
+            </a>
+        </div>
+        
+        <div class="project-card">
+            <a href="https://github.com/cyxkira29/M2_Yleana_LearnYouNode" target="_blank">
+                <i class="project-icon fas fa-database"></i>
+                <h3>Project 7</h3>
+                <p>Activity Week 11 Learn You Node.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="blank" target="_blank">
+                <i class="project-icon fas fa-database"></i>
+                <h3>Project 8</h3>
+                <p>Web Programming M2 Summative Assessment.</p>
+            </a>
+        </div>
+        
     </div>
 </section>
 
