--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -76,65 +76,64 @@
     <h2>My Projects</h2>
     <div class="project-grid">
         <div class="project-card">
-            <a href="/index.html" target="_blank">
+            <a href="/index.html">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 1</h3>
                 <p>Environment Setup Activity.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="/ExplorePHTours/YleanaExplorePHTours.html" target="_blank">
+            <a href="/ExplorePHTours/YleanaExplorePHTours.html">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 2</h3>
                 <p>ExplorePHTours Activity</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="/CourseSchedule/YleanaCourseSchedule.html" target="_blank">
+            <a href="/CourseSchedule/YleanaCourseSchedule.html">
                 <i class="project-icon fas fa-laptop-code"></i>
                 <h3>Project 3</h3>
                 <p>Course Schedule Activity.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="/Activity 4/index.html" target="_blank">
+            <a href="/Activity 4/index.html">
                 <i class="project-icon fas fa-paint-brush"></i>
                 <h3>Project 4</h3>
                 <p>Activity 4 Week 5.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="/Activity 5/index.html" target="_blank">
+            <a href="/Activity 5/index.html">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 5</h3>
                 <p>Activity 5 Week 5.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="https://github.com/cyxkira29/M2_Yleana_Javascripting" target="_blank">
+            <a href="https://github.com/cyxkira29/M2_Yleana_Javascripting">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 6</h3>
                 <p>Activity Week 11 Javascripting.</p>
             </a>
         </div>
-        
         <div class="project-card">
-            <a href="https://github.com/cyxkira29/M2_Yleana_LearnYouNode" target="_blank">
+            <a href="https://github.com/cyxkira29/M2_Yleana_LearnYouNode">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 7</h3>
                 <p>Activity Week 11 Learn You Node.</p>
             </a>
         </div>
         <div class="project-card">
-            <a href="blank" target="_blank">
+            <a href="/WEBPROG/public/html/new-customer.html">
                 <i class="project-icon fas fa-database"></i>
                 <h3>Project 8</h3>
                 <p>FINAL PROJECT - M2 Summative Assessment</p>
             </a>
         </div>
-        
     </div>
 </section>
+
 
 
 <section id="questions">
