war is over!!!!

--- a/WEBPROG/public/html/add-items.html
+++ b/WEBPROG/public/html/add-items.html
@@ -20,7 +20,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand fw-bold" href="new-customer.html">Samarena Pawnshop</a>
+            <a class="navbar-brand fw-bold" href="new-customer.html">Samareña Pawnshop</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -37,7 +37,7 @@
                 <ul class="navbar-nav sidenav">
                     <li class="nav-link bordered px-3">
                         <a href="new-customer.html" class="nav-link px-3">
-                            <span class="me-2"><i class="bi bi-person-fill"></i></span>
+                            <span class="me-2"><i class="bi bi-person"></i></span>
                             <span>New Customer</span>
                         </a>
                     </li>
@@ -63,6 +63,12 @@
                                 </li>
                             </ul>
                         </div>
+                    </li>
+                    <li class="nav-link bordered px-3">
+                        <a href="for-auctioned-items.html" class="nav-link px-3">
+                            <span class="me-2"><i class="bi bi-hammer"></i></span>
+                            <span>For Auctioned/Sale</span>
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -142,7 +148,7 @@
         </div>
     </main>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="../js/add-items.js"></script>
     
